Add transfer type configuration to watcher and batch API
